src/test/ui/impl-trait/infinite-impl-trait-issue-38064.stderr
error: recursive opaque type
  --> $DIR/infinite-impl-trait-issue-38064.rs:18:13
   |
LL | fn foo() -> impl Quux { //~ recursive opaque type
   |             ^^^^^^^^^ resolves to self-referential type
   |
   = note: resolved type is `foo::Foo<bar::Bar<impl Quux>>`

error: recursive opaque type
  --> $DIR/infinite-impl-trait-issue-38064.rs:24:13
   |
LL | fn bar() -> impl Quux { //~ recursive opaque type
   |             ^^^^^^^^^ resolves to self-referential type
   |
   = note: resolved type is `bar::Bar<foo::Foo<impl Quux>>`

error: aborting due to 2 previous errors

